﻿Subtitle Edit Changelog

3.4.12 (xth March 2016) BETA
* NEW:
   * Norwegian translation - thx Imre
* IMPROVED:
   * Updated Catalan translation - thx juansa
   * updated Bulgarian translation - thx Maknol
   * Updated Basque translation - thx Xabier Aramendi
   * Batch convert: Added VobSub output
   * Point sync: Added "Go to line" (Ctrl+G) - thx ivandrofly
   * Remove text for HI: Added Apply button - thx Splike/ivandrofly
   * Export to FPC+image now allows for full frame image - thx Mathieu
* FIXED:
   * Several fixes for Find/Count - thx André
   * Saving no longer requires exclusive access (regression from 3.4.11) - thx Whisker72
   * Batch convert: Show FCE settings if "Skip step one" is checked - thx ivandrofly
   * Spell check "change" / "change all" issue regarding dash - thx kurosu
   * Fix for "Spell check" auto-fix name - thx Chamallow
   * Better handling of spell check "Add to names list" (if name modified) - thx Chamallow
   * Fixed crash regarding font in image export - thx r0lZ
   * Fix for (sometimes) not restoring last focused line at startup - thx vmb
   * Fixed bug in handling of inline font tag in ASS format - thx Kyoichi
   * Added missing undo regarding column delete text
   * Allow reading of small PAC files - thx Mike
   * Fixed bug in "Fix invalid italic tags" - thx ivandrofly
   * Fixed allowing random order of json tags - thx fela98


3.4.11 (16th January 2016)
* NEW:
   * New "Binary Image Compare" OCR
   * New subtitle formats
   * Export to Pac-Unicode and Ayato 3
   * Installer can now set icons for SE - thx xylographe
   * Can now import TextST from Matroska (.mkv) files - thx Rudde
   * Can now import "Timed Text image" files - thx Mouna
   * Added "change speed" option in "Batch convert" - thx TomONeill
   * Added "Blu-ray sup" output in "Batch convert" - thx Dan
* IMPROVED:
   * Updated French/Dutch/German translation - thx xylographe
   * Updated Basque translation - thx Xabier Aramendi