@@ -361,6 +361,7 @@
     <Compile Include="SubtitleFormats\UnknownSubtitle29.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle3.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle30.cs" />
+    <Compile Include="SubtitleFormats\UnknownSubtitle81.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle80.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle79.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle31.cs" />
